Rendered navbar properly

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
 MONGODB_URI="mongodb+srv://jikazuna:karachibakery@user-details.ysucn.mongodb.net/"
 JWT_SECRET="ajsdjadka"
+DIALOGFLOW_PROJECT_ID="socailbot-jgix"
