--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
+    "dialogflow": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
