--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,5 @@
 MONGODB_URI="mongodb+srv://jikazuna:karachibakery@user-details.ysucn.mongodb.net/"
 JWT_SECRET="ajsdjadka"
 DIALOGFLOW_PROJECT_ID="socailbot-jgix"
+NGROK_API_URL="YOUR_NGROK_URL"
+
