remove the gemini secret key lmao MB

--- a/Backend/.env
+++ b/Backend/.env
@@ -2,4 +2,5 @@ MONGODB_URI="mongodb+srv://jikazuna:karachibakery@user-details.ysucn.mongodb.net
 JWT_SECRET="ajsdjadka"
 DIALOGFLOW_PROJECT_ID="socailbot-jgix"
 NGROK_API_URL="YOUR_NGROK_URL"
+GEMINI_API_KEY="YOUR_GEMINI_KEY"
 
