--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,5 @@
 MONGODB_URI="mongodb+srv://jikazuna:karachibakery@user-details.ysucn.mongodb.net/"
 JWT_SECRET="ajsdjadka"
 DIALOGFLOW_PROJECT_ID="socailbot-jgix"
-NGROK_API_URL="YOUR_NGROK_URL"
-GEMINI_API_KEY="YOUR_GEMINI_KEY"
-
+NGROK_API_URL="https://7b60-34-143-193-163.ngrok-free.app"
+GEMINI_API_KEY=AIzaSyCKf5X_tsPRZhmJla81Vc0dzTCir76rTf8
