changed a lot of shit idk, annoyed changed color scheme to match the wizard, auiedfiubefi

--- a/Backend/.env
+++ b/Backend/.env
@@ -3,3 +3,4 @@ JWT_SECRET="ajsdjadka"
 DIALOGFLOW_PROJECT_ID="socailbot-jgix"
 NGROK_API_URL="https://7b60-34-143-193-163.ngrok-free.app"
 GEMINI_API_KEY=AIzaSyCKf5X_tsPRZhmJla81Vc0dzTCir76rTf8
+PORT="5000"
